overflow bug fixed

--- a/src/components/updatenode.css
+++ b/src/components/updatenode.css
@@ -8,6 +8,7 @@
     border-radius: 5px;
     padding: 10px;
     color: white;
+    height: 485px;
   }
   .fieldtextcol{
     color: black
